# game-theory

./: .env.example  .gitignore  .secretlintrc.json  Cargo.toml  README.md  environments.toml  eslint.config.js  index.html  package-lock.json  package.json  pages.toml  playwright.config.ts  vite.config.ts  wrangler.toml
.husky/: pre-commit
api/: index.ts  matchmaking-worker.ts  venice-proxy-worker.ts
circuits/allowlist_membership/: Nargo.toml  Prover.toml  Verifier.toml
circuits/allowlist_membership/src/: main.nr
circuits/move_commitment/: Nargo.toml  Prover.toml  Verifier.toml
circuits/move_commitment/src/: main.nr
contracts/prisoners-dilemma/: Cargo.toml
contracts/prisoners-dilemma/src/: error.rs  lib.rs  xlm.rs
contracts/single-player-dilemma/: Cargo.toml  README.md
contracts/single-player-dilemma/src/: error.rs  lib.rs
contracts/zk_dilemma/: Cargo.toml
contracts/zk_dilemma/src/: error.rs  lib.rs
docs/: AI_INTEGRATION_ANALYSIS.md  PRODUCT_REVIEW.md  ROADMAP.md  ZK_HACKATHON_PLAN.md  demo-script.md
e2e/: _diagnose.spec.ts  capture-demo.spec.ts
e2e/demo-footage/_diagnose-diagnose-play-with-mock-wallet-demo-capture/: video.webm
public/: _routes.json  about.html  robots.txt  sitemap.xml
public/circuits/: allowlist_membership.json  move_commitment.json
src/: App.tsx  index.css  main.tsx
src/components/: AppShell.tsx  AudioManager.tsx  Character.tsx  DemoRound.tsx  ErrorBoundary.tsx  FirstRunWizard.tsx  MascotContext.tsx  PersonalityQuiz.tsx  PrisonersDilemma.tsx  ReactiveMascot.tsx  SlideSystem.tsx  TrustFallCharacter.tsx  WalletButton.tsx  WalletSetupHelper.tsx
src/components/ai/: AIPersonas.ts  AITutorPanel.tsx  LLMOpponent.ts  VeniceAIService.ts  index.ts
src/components/slides/: ChoiceSlide.tsx  ConclusionSlide.tsx  EdgeSlide.tsx  GameSlide.tsx  IntroSlide.tsx  IteratedSlide.tsx  NoiseSlide.tsx  OpponentsSlide.tsx  PayoffMatrixEditor.tsx  RealThingSlide.tsx  RepeatSlide.tsx  StrategyInspector.tsx  TournamentMode.tsx  TournamentSlide.tsx  index.ts
src/components/ui/: AchievementBadge.tsx  AchievementToast.tsx  ConfirmDialog.tsx  CustomCursor.tsx  ElectricButton.tsx  EmptyState.tsx  ErrorState.tsx  (+6 more)
src/contracts/: prisoners_dilemma.ts  util.ts
src/hooks/: useBalance.ts  useFirstRun.ts  useGameState.ts  useGameStats.ts  useMagnetic.ts  useSinglePlayerGame.ts  useSlideAnimation.ts  useZKDilemma.ts
src/pages/: Debugger.tsx  Home.tsx  LearnJourney.tsx  TournamentPage.tsx  TutorialSandbox.tsx  ZKGamePage.tsx
src/providers/: WalletProvider.tsx
src/services/: accreditationProofService.ts  noirProofService.ts
src/styles/: slides.css
src/util/: friendbot.ts  merkleTree.ts  storage.ts  strategies.ts  tournament.ts  transactions.ts  wallet.ts
(+22 files in other folders)
