[package]
name = "prisoners-dilemma"
description = "Game theory Prisoner's Dilemma with real stakes"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[package.metadata.stellar]
cargo_inherit = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "23.0.3"
stellar-registry = "0.0.4"

[dev-dependencies]
stellar-xdr = { version = "23.0.0", features = ["curr", "serde"] }
soroban-sdk = { version = "23.0.3", features = ["testutils"] }
